--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@ header{
     z-index: 1000; /* Coloca o cabeçalho acima de outros elementos */
 }
 
+header > h1 {
+    display: inline-block;
+    padding: 0;
+    cursor: pointer;
+    font-size: 1.5em;
+}
+
 .container {
     max-width: 800px;
     margin: 20px auto;
@@ -32,8 +39,64 @@ h2, h3 {
     color: #003366;
 }
 
+.chart-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.chart-wrapper {
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: calc(50% - 20px); /* Two charts per row on large screens */
+    box-sizing: border-box;
+}
+
+.comparison-chart {
+    width: 50%; /* Comparison chart takes full width */
+}
+
+canvas {
+    width: 50%;
+    height: auto;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .chart-wrapper {
+        width: 90%; /* Full width on small screens */
+    }
+
+    header > h1 {
+        display: inline-block;
+        padding: 0;
+        cursor: pointer;
+        font-size: 1em;
+    }
+}
+
+/* 
+@media (max-width: 600px) {
+    .chart-wrapper {
+        width: 90%; 
+    }
+} */
+
+
+.charts-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
 button {
+    display: block;
     background-color: #6699CC;
+    margin: 10px auto;
     color: #FFF;
     border: none;
     padding: 10px 20px;
@@ -93,12 +156,16 @@ label {
 
 .charts-container {
     display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
+    justify-content: space-around;
+}
+
+.charts-container2 {
+    display: flex;
+    justify-content: center;
 }
 
 .chart-wrapper {
-    width: 30%;
+    display:block;
     text-align: center;
 }
 
